feature(supplier): implement supplier create accomodation feature
- add suppliers table to database
- add routes and controllers
- write tests
- add validations

[Finishes #167891602]
